using WarpTalk.NotificationService.Domain.Entities;
using System;
using System.Collections.Generic;
using Microsoft.EntityFrameworkCore;
// using WarpTalk.NotificationService.Infrastructure.Entities;

namespace WarpTalk.NotificationService.Infrastructure.Persistence;

public partial class NotificationDbContext : DbContext
{
    public NotificationDbContext()
    {
    }

    public NotificationDbContext(DbContextOptions<NotificationDbContext> options)
        : base(options)
    {
    }

    public virtual DbSet<NotificationPreference> NotificationPreferences { get; set; }

    public virtual DbSet<NotificationTemplate> NotificationTemplates { get; set; }

    public virtual DbSet<PushSubscription> PushSubscriptions { get; set; }

    public virtual DbSet<NotificationMessage> NotificationMessages { get; set; }

    public virtual DbSet<AdminNotification> AdminNotifications { get; set; }
    public virtual DbSet<NotificationInboxMessage> InboxMessages { get; set; }

    protected override void OnModelCreating(ModelBuilder modelBuilder)
    {
        modelBuilder.HasPostgresExtension("pgcrypto");
        modelBuilder.HasPostgresExtension("pg_trgm");

        modelBuilder.Entity<AdminNotification>(entity =>
        {
            entity.HasKey(e => e.Id).HasName("admin_notifications_pkey");

            entity.ToTable("admin_notifications", "notification");

            entity.HasIndex(e => e.CreatedAt, "idx_admin_notifications_created_at").IsDescending();
            entity.HasIndex(e => e.CreatedBy, "idx_admin_notifications_created_by");
            entity.HasIndex(e => e.Status, "idx_admin_notifications_status");
            entity.HasIndex(e => new { e.Type, e.Status, e.CreatedAt }, "idx_admin_notif_list_opt").IsDescending(false, false, true);

            entity.Property(e => e.Id)
                .HasDefaultValueSql("uuid_generate_v7()")
                .HasColumnName("id");
            entity.Property(e => e.Title)
                .HasMaxLength(255)
                .HasColumnName("title");
            entity.Property(e => e.Content).HasColumnName("content");
            entity.Property(e => e.Type)
                .HasMaxLength(50)
                .HasColumnName("type");
            entity.Property(e => e.Payload)
                .HasDefaultValueSql("'{}'::jsonb")
                .HasColumnType("jsonb")
                .HasColumnName("payload");
            entity.Property(e => e.TargetAudienceMode)
                .HasMaxLength(50)
                .HasColumnName("target_audience_mode");
            entity.Property(e => e.TargetAudienceData)
                .HasDefaultValueSql("'{}'::jsonb")
                .HasColumnType("jsonb")
                .HasColumnName("target_audience_data");
            entity.Property(e => e.Status)
                .HasMaxLength(50)
                .HasColumnName("status");
            entity.Property(e => e.CreatedBy).HasColumnName("created_by");
            entity.Property(e => e.UpdatedBy).HasColumnName("updated_by");
            entity.Property(e => e.CreatedAt)
                .HasDefaultValueSql("now()")
                .HasColumnName("created_at");
            entity.Property(e => e.UpdatedAt)
                .HasDefaultValueSql("now()")
                .HasColumnName("updated_at");
        });

        modelBuilder.Entity<NotificationInboxMessage>(entity =>
        {
            entity.HasKey(e => new { e.EventId, e.Consumer }).HasName("inbox_messages_pkey");
            entity.ToTable("inbox_messages", "notification");
            entity.Property(e => e.EventId).HasColumnName("event_id");
            entity.Property(e => e.Consumer).HasColumnName("consumer").HasMaxLength(150);
            entity.Property(e => e.EventType).HasColumnName("event_type").HasMaxLength(150);
            entity.Property(e => e.ProcessedAt).HasColumnName("processed_at");
        });

        modelBuilder.Entity<NotificationMessage>(entity =>
        {
            entity.HasKey(e => new { e.Id, e.CreatedAt }).HasName("notification_messages_pkey");

            entity.ToTable("notification_messages", "notification");

            entity.HasIndex(e => new { e.UserId, e.CreatedAt }, "idx_notif_msgs_user_unread").IsDescending(false, true).HasFilter("(is_read = FALSE)");
            entity.HasIndex(e => e.CreatedAt, "idx_notif_msgs_created_at").IsDescending();
            entity.HasIndex(e => e.UserId, "idx_notif_msgs_user");

            entity.Property(e => e.Id)
                .HasDefaultValueSql("uuid_generate_v7()")
                .HasColumnName("id");
            entity.Property(e => e.UserId).HasColumnName("user_id");
            entity.Property(e => e.Type)
                .HasMaxLength(50)
                .HasColumnName("type");
            entity.Property(e => e.Title)
                .HasMaxLength(255)
                .HasColumnName("title");
            entity.Property(e => e.Content).HasColumnName("content");
            entity.Property(e => e.ActionUrl)
                .HasMaxLength(500)
                .HasColumnName("action_url");
            entity.Property(e => e.PayloadJson)
                .HasDefaultValueSql("'{}'::jsonb")
                .HasColumnType("jsonb")
                .HasColumnName("payload_json");
            entity.Property(e => e.IsRead)
                .HasDefaultValue(false)
                .HasColumnName("is_read");
            entity.Property(e => e.ReadAt).HasColumnName("read_at");
            entity.Property(e => e.CreatedAt)
                .HasDefaultValueSql("now()")
                .HasColumnName("created_at");
        });

        modelBuilder.Entity<NotificationPreference>(entity =>
        {
            entity.HasKey(e => e.Id).HasName("notification_preferences_pkey");

            entity.ToTable("notification_preferences", "notification");

            entity.HasIndex(e => e.UserId, "idx_notif_prefs_user");

            entity.HasIndex(e => new { e.UserId, e.NotificationType }, "notification_preferences_user_id_notification_type_key").IsUnique();

            entity.Property(e => e.Id)
                .HasDefaultValueSql("uuid_generate_v7()")
                .HasColumnName("id");
            entity.Property(e => e.EmailEnabled)
                .HasDefaultValue(true)
                .HasColumnName("email_enabled");
            entity.Property(e => e.InAppEnabled)
                .HasDefaultValue(true)
                .HasColumnName("in_app_enabled");
            entity.Property(e => e.NotificationType)
                .HasMaxLength(50)
                .HasColumnName("notification_type");
            entity.Property(e => e.PushEnabled)
                .HasDefaultValue(true)
                .HasColumnName("push_enabled");
            entity.Property(e => e.UpdatedAt)
                .HasDefaultValueSql("now()")
                .HasColumnName("updated_at");
            entity.Property(e => e.UserId).HasColumnName("user_id");
        });

        modelBuilder.Entity<NotificationTemplate>(entity =>
        {
            entity.HasKey(e => e.Id).HasName("notification_templates_pkey");

            entity.ToTable("notification_templates", "notification");

            entity.HasIndex(e => e.Type, "notification_templates_type_key").IsUnique();

            entity.Property(e => e.Id)
                .HasDefaultValueSql("uuid_generate_v7()")
                .HasColumnName("id");
            entity.Property(e => e.BodyTemplate).HasColumnName("body_template");
            entity.Property(e => e.Channel)
                .HasMaxLength(20)
                .HasColumnName("channel");
            entity.Property(e => e.CreatedAt)
                .HasDefaultValueSql("now()")
                .HasColumnName("created_at");
            entity.Property(e => e.IsActive)
                .HasDefaultValue(true)
                .HasColumnName("is_active");
            entity.Property(e => e.Subject)
                .HasMaxLength(255)
                .HasColumnName("subject");
            entity.Property(e => e.Type)
                .HasMaxLength(50)
                .HasColumnName("type");
            entity.Property(e => e.UpdatedAt)
                .HasDefaultValueSql("now()")
                .HasColumnName("updated_at");
            entity.Property(e => e.Variables)
                .HasDefaultValueSql("'[]'::jsonb")
                .HasColumnType("jsonb")
                .HasColumnName("variables");
        });

        modelBuilder.Entity<PushSubscription>(entity =>
        {
            entity.HasKey(e => e.Id).HasName("push_subscriptions_pkey");

            entity.ToTable("push_subscriptions", "notification");

            entity.HasIndex(e => e.UserId, "idx_push_subs_user");

            entity.HasIndex(e => e.DeviceToken, "push_subscriptions_device_token_key").IsUnique();

            entity.Property(e => e.Id)
                .HasDefaultValueSql("uuid_generate_v7()")
                .HasColumnName("id");
            entity.Property(e => e.CreatedAt)
                .HasDefaultValueSql("now()")
                .HasColumnName("created_at");
            entity.Property(e => e.DeviceName)
                .HasMaxLength(100)
                .HasColumnName("device_name");
            entity.Property(e => e.DeviceToken)
                .HasMaxLength(500)
                .HasColumnName("device_token");
            entity.Property(e => e.IsActive)
                .HasDefaultValue(true)
                .HasColumnName("is_active");
            entity.Property(e => e.LastUsedAt).HasColumnName("last_used_at");
            entity.Property(e => e.Platform)
                .HasMaxLength(20)
                .HasColumnName("platform");
            entity.Property(e => e.UpdatedAt)
                .HasDefaultValueSql("now()")
                .HasColumnName("updated_at");
            entity.Property(e => e.UserId).HasColumnName("user_id");
        });

        OnModelCreatingPartial(modelBuilder);
    }

    partial void OnModelCreatingPartial(ModelBuilder modelBuilder);
}
