@startuml
title 3.8 Notification Module Class Diagram (Report 4 Embedded Version)

top to bottom direction
hide circle

skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam dpi 140
skinparam titleFontSize 18
skinparam packageFontSize 16
skinparam classFontSize 14
skinparam classAttributeFontSize 12
skinparam ArrowFontSize 11
skinparam nodesep 36
skinparam ranksep 44
skinparam packageTitleAlignment left
skinparam packageStyle rectangle
skinparam packageBackgroundColor White
skinparam packageBorderColor Black
skinparam classBackgroundColor White
skinparam classBorderColor Black
skinparam ArrowColor Black

package "API Layer" as ApiLayer {
  class NotificationsController <<boundary>> {
    - notificationService: INotificationService
    --
    + GetNotifications(userId: Guid): Task<Result>
    + MarkAsRead(notificationId: Guid): Task<Result>
    + GetPreferences(userId: Guid): Task<Result>
  }

  class AdminNotificationsController <<boundary>> {
    - adminNotificationService: IAdminNotificationService
    --
    + CreateAdminNotification(request: CreateAdminNotificationRequest): Task<Result>
    + BroadcastNotification(adminNotificationId: Guid): Task<Result>
  }

  class NotificationHub <<boundary>> {
    - notificationService: INotificationService
    --
    + JoinUserGroupAsync(userId: Guid): Task
    + SendRealtimeNotificationAsync(userId: Guid, notification: NotificationDto): Task
  }

  NotificationsController -[hidden]right- AdminNotificationsController
  AdminNotificationsController -[hidden]right- NotificationHub
}

package "Application Layer" as ApplicationLayer {
  class NotificationService <<control>> {
    - notificationRepository: INotificationMessageRepository
    - preferenceRepository: INotificationPreferenceRepository
    - templateRenderer: IEmailTemplateRenderer
    - smtpAdapter: IMailkitSmtpAdapter
    - unitOfWork: IUnitOfWork
    --
    + SendNotificationAsync(userId: Guid, type: String, payload: Object): Task<Result>
    + MarkNotificationReadAsync(notificationId: Guid): Task<Result>
  }

  class AdminNotificationService <<control>> {
    - adminNotificationRepository: IAdminNotificationRepository
    - notificationService: INotificationService
    - unitOfWork: IUnitOfWork
    --
    + CreateBroadcastNotificationAsync(title: String, content: String): Task<Result>
    + DispatchBroadcastAsync(adminNotificationId: Guid): Task<Result>
  }

  NotificationService -[hidden]right- AdminNotificationService
}

package "Infrastructure Layer" as InfrastructureLayer {
  class NotificationDbContext <<control>> {
    + NotificationMessages: DbSet<NotificationMessage>
    + NotificationPreferences: DbSet<NotificationPreference>
    + NotificationTemplates: DbSet<NotificationTemplate>
    + PushSubscriptions: DbSet<PushSubscription>
    + AdminNotifications: DbSet<AdminNotification>
    --
    + SaveChangesAsync(): Task<Int>
  }

  class UnitOfWork <<control>> {
    - dbContext: NotificationDbContext
    --
    + SaveChangesAsync(): Task<Int>
    + BeginTransactionAsync(): Task
    + CommitTransactionAsync(): Task
  }

  class NotificationMessageRepository <<control>> {
    - dbContext: NotificationDbContext
    --
    + GetByUserIdAsync(userId: Guid): Task<List<NotificationMessage>>
    + AddAsync(message: NotificationMessage): Task
  }

  class NotificationPreferenceRepository <<control>> {
    - dbContext: NotificationDbContext
    --
    + GetByUserIdAsync(userId: Guid): Task<List<NotificationPreference>>
  }

  class EmailTemplateRenderer <<control>> {
    - templateRootPath: String
    --
    + RenderTemplateAsync(templateName: String, model: Object): Task<String>
  }

  class MailkitSmtpAdapter <<control>> {
    - smtpOptions: SmtpOptions
    --
    + SendEmailAsync(toEmail: String, subject: String, bodyHtml: String): Task
  }

  NotificationMessageRepository -[hidden]right- NotificationPreferenceRepository
  NotificationPreferenceRepository -[hidden]right- EmailTemplateRenderer
  EmailTemplateRenderer -[hidden]right- MailkitSmtpAdapter
  NotificationDbContext -[hidden]right- UnitOfWork
  NotificationMessageRepository -[hidden]down- NotificationDbContext
}

package "Domain Layer" as DomainLayer {
  class AdminNotification <<entity>> {
    - Id: Guid
    - Title: String
    - Content: String
    - TargetAudienceMode: String
    - Status: String
    - CreatedBy: Guid
    --
  }

  class NotificationMessage <<entity>> {
    - Id: Guid
    - UserId: Guid
    - Type: String
    - Title: String
    - Content: String
    - ActionUrl: String
    - IsRead: Boolean
    - CreatedAt: DateTime
    --
  }

  class NotificationPreference <<entity>> {
    - Id: Guid
    - UserId: Guid
    - NotificationType: String
    - EmailEnabled: Boolean
    - PushEnabled: Boolean
    - InAppEnabled: Boolean
    --
  }

  class NotificationTemplate <<entity>> {
    - Id: Guid
    - Type: String
    - Channel: String
    - Subject: String
    - BodyTemplate: String
    - IsActive: Boolean
    --
  }

  class PushSubscription <<entity>> {
    - Id: Guid
    - UserId: Guid
    - DeviceToken: String
    - Platform: String
    - IsActive: Boolean
    --
  }

  AdminNotification -[hidden]right- NotificationMessage
  NotificationMessage -[hidden]down- NotificationPreference
  NotificationPreference -[hidden]right- NotificationTemplate
  NotificationTemplate -[hidden]right- PushSubscription
}

NotificationsController --> NotificationService
AdminNotificationsController --> AdminNotificationService
NotificationHub --> NotificationService
AdminNotificationService --> NotificationService

NotificationService ..> NotificationMessageRepository
NotificationService ..> NotificationPreferenceRepository
NotificationService ..> EmailTemplateRenderer
NotificationService ..> MailkitSmtpAdapter
NotificationService ..> UnitOfWork

AdminNotificationService ..> NotificationService
AdminNotificationService ..> UnitOfWork

NotificationMessageRepository ..> NotificationDbContext
NotificationPreferenceRepository ..> NotificationDbContext
UnitOfWork ..> NotificationDbContext

NotificationMessageRepository ..> NotificationMessage : persists
NotificationPreferenceRepository ..> NotificationPreference : persists

AdminNotification *-right- "0..*" NotificationMessage
NotificationMessage *-down- "0..*" NotificationPreference
NotificationMessage *-down- "0..*" NotificationTemplate
NotificationMessage *-down- "0..*" PushSubscription

@enduml
